# sqlcipher_build_msvc

./: .gitignore  CMakeLists.txt  README.md  build.bat  test.cpp
3rd/OpenSSL/lib/x64/Release/: libapps.lib  libcommon.lib  liblegacy.lib  libtestutil.lib
3rd/OpenSSL/lib/x86/Release/: capi.lib  dasync.lib  ec_internal_test.lib  legacy.lib  libapps.lib  libcommon.lib  libcrypto.def  libcrypto.lib  liblegacy.lib  libssl.def  libssl.lib  libtestutil.lib  loader_attic.lib  openssl.lib  ossltest.lib  p_minimal.lib  p_test.lib  padlock.lib
sqlcipher_410/: shell.c
